# opengl-boilerplate

./: Application.cpp  CMakeLists.txt  README.md  a.out
lib/: VertexBuffer.cpp  VertexBuffer.h
res/shaders/: basic.frag  basic.vert
